# HRAmbientAI

./: .env.example  .gitignore  README.md  pyproject.toml
src/hr_ambient_ai/: __init__.py  config.py  hibob_cli.py
src/hr_ambient_ai/hibob/: __init__.py  client.py
